[package]
name = "libperif"
version = "0.2.0"
authors = ["Edwin Svensson <git@olback.net>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "gen-rules"
path = "src/bin/gen_rules.rs"

[[bin]]
name = "gen-list"
path = "src/bin/gen_list.rs"

[[bin]]
name = "list-all-connected"
path = "src/bin/list_all_connected.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "1.1", default-features = false, features = [ "linux-static-hidraw" ] }
